fix some spacing issues

--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -3,15 +3,17 @@
 @use "../../styles/partials/mixins" as *;
 
 .hero {
-  height: 100vh;
+  height: 90vh;
   margin-top: 6rem;
   @include tablet {
     height: max-content;
     display: flex;
     width: 100%;
+    padding: 1rem;
     justify-content: space-evenly;
   }
   @include desktop {
+    padding: 0;
     justify-content: flex-start;
     gap: 2rem;
   }
