--- a/src/components/MainSection/MainSection.scss
+++ b/src/components/MainSection/MainSection.scss
@@ -9,7 +9,7 @@
     align-items: center;
     text-align: center;
     @include tablet {
-      margin-top: 3rem;
+      margin-top: 6rem;
       width: 100%;
     }
   
